syntax = "proto3";

package com.ca.patient;

option java_multiple_files = true;

message PatientInfo{
	int64 patientId = 1;
	string firstName = 2;
	string lastName = 3;
	string dob = 4;
	string gender = 5;
	string email = 6;
}

message PracticeInfo{
	int64 practiceId = 1;
	string practiceName = 2;
	string address = 3;
	string phoneNumber = 4;
	string email=5;
}

message CreatePatientRequest{
	string firstName = 1;
	string lastName = 2;
	string dob = 3;
	string gender = 4;
	string email = 5;
}

message GetPatientByRequest{
	int64 patientId = 1;
}

message Appointment {
    int64 appointmentId = 1;
    PatientInfo patient = 2;
    PracticeInfo practice = 3;
    string appointmentDateTime = 4;
    string appointmentCreationDateTime = 5;
    string status = 6;
}

message CreateAppointmentRequest{
    int64 patientId = 1;
    int64 practiceId = 2;
    string appointmentDateTime = 3;
    string appointmentCreationDateTime = 4;
    string status = 5;
}

message GetAppointmentByIdRequest{
	int64 appointmentId = 1;
}

message GetAppointmentByPatientIdRequest{
	int64 patientId = 1;
}

service PatientService{
	rpc getPatientById(GetPatientByRequest) returns (PatientInfo){};
	
	rpc createPatient(CreatePatientRequest) returns (PatientInfo){}; 
}


service AppointmentService{
	rpc getAppointmentById(GetAppointmentByIdRequest) returns (Appointment){};
	
	rpc getAppointmentByPatientId(GetAppointmentByPatientIdRequest) returns (stream Appointment){};
	
	rpc createAppointment(CreateAppointmentRequest) returns (Appointment) {};
}